@@ -7,6 +7,9 @@ Lib/
 * LDAPObject.read_s() now returns None instead of raising 
   ldap.NO_SUCH_OBJECT in case the search operation returned emtpy result.
 
+Tests/
+* Unit tests for module ldif (thanks to Petr Viktorin)
+
 ----------------------------------------------------------------
 Released 2.4.20 2015-07-07
 
@@ -1187,4 +1190,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.352 2015/08/08 13:37:41 stroeder Exp $
+$Id: CHANGES,v 1.353 2015/09/18 14:51:44 stroeder Exp $
